test/Fail/AnonymousRecConstrParse1.agda
module AnonymousRecConstrParse1 where

_ = Foo.constructor.bar
