test/Fail/AnonymousRecConstrParse1.err
AnonymousRecConstrParse1.agda:3.5: error: [ParseError]
in the name constructor, the part constructor is not valid because it is a keyword
